--- a/ProyectoBases/nbproject/private/private.properties
+++ b/ProyectoBases/nbproject/private/private.properties
@@ -1,2 +1,6 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Sergio Cardenas\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=/home/leonardo/.netbeans/8.0.2/build.properties
